--- a/about.html
+++ b/about.html
@@ -38,17 +38,17 @@
       </nav>
       <h1>About</h1>
     </section>
-    <!-----------------About content------------------------------------->
+    <!-----------------Sub content------------------------------------->
 
-    <section class="about">
+    <section class="subcontent">
       <div class="row">
-        <div class="about-col">
+        <div class="subcontent-col">
           <h1>Vision</h1>
           <p>To be the heart of our diverse community by promoting the development of independent, self-confident, and literate citizens, and providing equitable access to cultural, intellectual, technological, and information resources.
           </p>
           <a href="explore.html" class="hero-btn blue-btn">Read Now</a>
           </div>
-        <div class="about-col">
+        <div class="subcontent-col">
           <img src="images\img1.jpg" />
         </div>
       </div>
@@ -81,7 +81,7 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
+          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara <br><a href="sitemap.html">(Site Map)</a></p>
         </div>
 
         <div class="footer-col3">
