--- a/connect.html
+++ b/connect.html
@@ -39,14 +39,14 @@
     </section>
     <!-----------------Connect content------------------------------------->
 
-    <section class="about">
+    <section class="subcontent">
       <div class="row">
-        <div class="about-col">
+        <div class="subcontent-col">
           <h1>Main Branch<br>Silent Library,Riverston Road, Colombo 6</h1>
           <p>Join us for storytimes, book groups, and other programs for all ages. Read or work in one of our many comfortable seating areas. Use our computers or take advantage of our free wi-fi.</p>
           <a href="index.html" class="hero-btn blue-btn">Read Now</a>
         </div>
-        <div class="about-col">
+        <div class="subcontent-col">
           <img src="images\bg4.jpg" />
         </div>
       </div>
@@ -79,7 +79,7 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
+          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br><a href="sitemap.html">(Site Map)</a></p>
         </div>
 
         <div class="footer-col3">
