--- a/events.html
+++ b/events.html
@@ -99,7 +99,7 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
+          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br><a href="sitemap.html">(Site Map)</a></p>
         </div>
 
         <div class="footer-col3">
