--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -26,7 +26,7 @@
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="connect.html">Connect</a></li>
@@ -37,11 +37,11 @@
       </nav>
       <h1>Policies</h1>
     </section>
-    <!-----------------About content------------------------------------->
+    <!-----------------Sub content------------------------------------->
 
-    <section class="about">
+    <section class="subcontent">
       <div class="row">
-        <div class="about-col">
+        <div class="subcontent-col">
           <h1>Circulation Services</h1>
           <p>Library Card Policy<br>
             Checkout Policy<br>
@@ -49,7 +49,7 @@
           </p>
           <a href="explore.html" class="hero-btn blue-btn">Read Now</a>
           </div>
-        <div class="about-col">
+        <div class="subcontent-col">
           <img src="images\img1.jpg" />
         </div>
       </div>
@@ -82,7 +82,7 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
+          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br><a href="sitemap.html">(Site Map)</a></p>
         </div>
 
         <div class="footer-col3">
