--- a/sitemap.html
+++ b/sitemap.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Silent Library</title>
+    <title>Site Map -Silent Library</title>
     <link rel="stylesheet" href="css\style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -26,8 +26,7 @@
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
             <li><a href="index.html">Home</a></li>
-          
-            <li><a class="active" href="">About</a></li>
+            <li><a href="about.html">About</a></li></li>
             <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="connect.html">Connect</a></li>
@@ -36,20 +35,26 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>About</h1>
+      <h1>Site Map</h1>
     </section>
-    <!-----------------About content------------------------------------->
+    <!-----------------Sitemap content------------------------------------->
 
-    <section class="about">
-      <div class="row">
-        <div class="about-col">
-          <h1>Vision</h1>
-          <p>To be the heart of our diverse community by promoting the development of independent, self-confident, and literate citizens, and providing equitable access to cultural, intellectual, technological, and information resources.
-          </p>
-          <a href="explore.html" class="hero-btn blue-btn">Read Now</a>
-          </div>
-        <div class="about-col">
-          <img src="images\img1.jpg" />
+    <section class="sitemap">
+      <div class="slickplan slickplan-0 slickplan-no-home">
+        <div class="slickplan-sitemap">
+          <ul class="slickplan-level-1">
+            <li class="slickplan-first slickplan-last slickplan-parent"><div><p>Silent Library</p></div>
+              <ul class="slickplan-level-2">
+                <li class="slickplan-first"><div><a href="home.html">Home</a></div></li>
+                <li><div><a href="about.html">About</a></div></li>
+                <li><div><a href="servicesandspecialties.html">Services and Specialties</a></div></li>
+                <li><div><a href="events.html">Events</a></div></li>
+                <li><div><a href="connect.html">Connect</a></div></li>
+                <li><div><a href="explore.html">Explore</a></div></li>
+                <li><div><a href="privacypolicy.html">Policies</a></div></li>
+              </ul>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
@@ -82,6 +87,7 @@
             <i class="fa fa-twitter"></i>
           </div>
           <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
+
         </div>
 
         <div class="footer-col3">
