--- a/sitemap.html
+++ b/sitemap.html
@@ -39,26 +39,27 @@
     </section>
     <!-----------------Sitemap content------------------------------------->
 
-    <section class="sitemap">
-      <div class="slickplan slickplan-0 slickplan-no-home">
-        <div class="slickplan-sitemap">
-          <ul class="slickplan-level-1">
-            <li class="slickplan-first slickplan-last slickplan-parent"><div><p>Silent Library</p></div>
-              <ul class="slickplan-level-2">
-                <li class="slickplan-first"><div><a href="home.html">Home</a></div></li>
-                <li><div><a href="about.html">About</a></div></li>
-                <li><div><a href="servicesandspecialties.html">Services and Specialties</a></div></li>
-                <li><div><a href="events.html">Events</a></div></li>
-                <li><div><a href="connect.html">Connect</a></div></li>
-                <li><div><a href="explore.html">Explore</a></div></li>
-                <li><div><a href="privacypolicy.html">Policies</a></div></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
+    <section >
+      <div class="sitemap">
+          <div class="row">
+            <div class="sitemap-col1">
+            </div>
+            <div class="sitemap-col2">
+                    <ul >
+                      <li ><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About</a></li>
+                      <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
+                      <li><a href="events.html">Events</a></li>
+                      <li><a href="connect.html">Connect</a></li>
+                      <li><a href="explore.html">Explore</a></li>
+                      <li><a href="privacypolicy.html">Policies</a></li>
+                </ul>
+            </div>
+            <div class="sitemap-col3"> 
+            </div>
+          </div>
+        </section>
+    
      <!----------------------------Footer---------------------------------->
      <section class="footer">
       <div class="row">
