get user info by json and jquery

--- a/connect.html
+++ b/connect.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src=js\script.js></script></script>
+    <script src="js\script.js"></script>
   </head>
 
   <body>
@@ -27,7 +27,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
+            <li>
+              <a href="servicesandspecialties.html">Services and Specialties</a>
+            </li>
             <li><a href="events.html">Events</a></li>
             <li><a class="active" href="">Connect</a></li>
             <li><a href="explore.html">Explore</a></li>
@@ -42,8 +44,12 @@
     <section class="subcontent">
       <div class="row">
         <div class="subcontent-col">
-          <h1>Main Branch<br>Silent Library,Riverston Road, Colombo 6</h1>
-          <p>Join us for storytimes, book groups, and other programs for all ages. Read or work in one of our many comfortable seating areas. Use our computers or take advantage of our free wi-fi.</p>
+          <h1>Main Branch<br />Silent Library,Riverston Road, Colombo 6</h1>
+          <p>
+            Join us for storytimes, book groups, and other programs for all
+            ages. Read or work in one of our many comfortable seating areas. Use
+            our computers or take advantage of our free wi-fi.
+          </p>
           <a href="index.html" class="hero-btn blue-btn">Read Now</a>
         </div>
         <div class="subcontent-col">
@@ -52,8 +58,8 @@
       </div>
     </section>
 
-     <!----------------------------Footer---------------------------------->
-     <section class="footer">
+    <!----------------------------Footer--------------------------------------->
+    <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
@@ -79,7 +85,12 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br><a href="sitemap.html">(Site Map)</a></p>
+          <p>
+            Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br /><a
+              href="sitemap.html"
+              >(Site Map)</a
+            >
+          </p>
         </div>
 
         <div class="footer-col3">
@@ -96,4 +107,4 @@
       </div>
     </section>
   </body>
-  </html>
+</html>
