--- a/events.html
+++ b/events.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src=js\script.js></script></script>
+    <script src="js\script.js"></script>
   </head>
 
   <body>
@@ -27,7 +27,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
+            <li>
+              <a href="servicesandspecialties.html">Services and Specialties</a>
+            </li>
             <li><a class="active" href="">Events</a></li>
             <li><a href="connect.html">Connect</a></li>
             <li><a href="explore.html">Explore</a></li>
@@ -44,36 +46,41 @@
         <div class="events-col">
           <h3>Kids</h3>
           <h2>Yellow Crayon Players Storytime</h2>
-          <p>Friday, December 1, 9:30am - 10:15am<br>
-            @ Main Library- Children's Room<br>
-           Age group:Children<br>
-           Event Type:Storytime & Early Literacy</p>
-           
+          <p>
+            Friday, December 1, 9:30am - 10:15am<br />
+            @ Main Library- Children's Room<br />
+            Age group:Children<br />
+            Event Type:Storytime & Early Literacy
+          </p>
         </div>
         <div class="events-col">
           <h3>Teens</h3>
           <h2>Teen Fall DIY's</h2>
-          <p>Saturday, December 9, 09:00am - 10:00am<br>
-            @ BMICH
-            Age Group:Teens(Grades 6-12)<br>
+          <p>
+            Saturday, December 9, 09:00am - 10:00am<br />
+            @ BMICH Age Group:Teens(Grades 6-12)<br />
 
-          Event type:Self-directed, Crafts and DIY<br>
-          Come to the Loft to make stuff with us!<br>Drop-in crafts available throughout the summer.</p>
+            Event type:Self-directed, Crafts and DIY<br />
+            Come to the Loft to make stuff with us!<br />Drop-in crafts
+            available throughout the summer.
+          </p>
         </div>
         <div class="events-col">
           <h3>Adults</h3>
           <h2>Fika</h2>
 
-          <p>Wednesday, November 12, 9:00am - 10:00am<br>
-            @ Main Library<br>
-           Age Group:   Adults<br>
-           Event Type:  VIRTUAL</p>
+          <p>
+            Wednesday, November 12, 9:00am - 10:00am<br />
+            @ Main Library<br />
+            Age Group: Adults<br />
+            Event Type: VIRTUAL
+          </p>
         </div>
       </div>
     </section>
 
-     <!----------------------------Footer---------------------------------->
-     <section class="footer">
+    <!----------------------------Footer---------------------------------->
+    <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
@@ -99,7 +106,12 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br><a href="sitemap.html">(Site Map)</a></p>
+          <p>
+            Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br /><a
+              href="sitemap.html"
+              >(Site Map)</a
+            >
+          </p>
         </div>
 
         <div class="footer-col3">
@@ -116,4 +128,4 @@
       </div>
     </section>
   </body>
-  </html>
+</html>
