--- a/explore.html
+++ b/explore.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src=js\script.js></script></script>
+    <script src="js\script.js"></script>
   </head>
 
   <body>
@@ -27,7 +27,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
+            <li>
+              <a href="servicesandspecialties.html">Services and Specialties</a>
+            </li>
             <li><a href="events.html">Events</a></li>
             <li><a href="connect.html">Connect</a></li>
             <li><a class="active" href="">Explore</a></li>
@@ -38,43 +40,107 @@
       <h1>Explore</h1>
     </section>
     <!-----------------explore content------------------------------------->
-<p>Find books, videos, and more in our online catalog. You have access to all the public libraries in our county through the Monroe County Library System. Download ebooks and audiobooks or check out one of our many databases.</p>
-<div class="row">
+    <p>
+      Find books, videos, and more in our online catalog. You have access to all
+      the public libraries in our county through the Monroe County Library
+      System. Download ebooks and audiobooks or check out one of our many
+      databases.
+    </p>
+    <div class="row">
       <div class="newBooks-col">
-        <img src="images\scienceComics.jpg">
-        <h3><a href="https://www.amazon.com/Science-Comics-Skyscrapers-Heights-Engineering/dp/1626727945" target="_blank">Science Comics Skycrapers<a></a></h3>
-        <p>Leave no brick unturned in John Kerschbaum's Science Comics: Skyscrapers, the latest volume in First Second’s action-packed nonfiction graphic novel series for middle-grade readers!</p>
+        <img src="images\scienceComics.jpg" />
+        <h3>
+          <a
+            href="https://www.amazon.com/Science-Comics-Skyscrapers-Heights-Engineering/dp/1626727945"
+            target="_blank"
+            >Science Comics Skycrapers</a
+          >
+        </h3>
+        <p>
+          Leave no brick unturned in John Kerschbaum's Science Comics:
+          Skyscrapers, the latest volume in First Second’s action-packed
+          nonfiction graphic novel series for middle-grade readers!
+        </p>
       </div>
       <div class="newBooks-col">
-        <img src="images\figgyAndBoone.jpg">
-        <h3><a href="https://www.simonandschuster.com/series/Figgy-Boone" target="_blank">Figgy & Boone</a></h3>
-        <p>In the second Level 1 Ready to Read Graphics book about a mouse named Figgy and a rat named Boone, the friends discover a big wheel of cheese!</p>
+        <img src="images\figgyAndBoone.jpg" />
+        <h3>
+          <a
+            href="https://www.simonandschuster.com/series/Figgy-Boone"
+            target="_blank"
+            >Figgy & Boone</a
+          >
+        </h3>
+        <p>
+          In the second Level 1 Ready to Read Graphics book about a mouse named
+          Figgy and a rat named Boone, the friends discover a big wheel of
+          cheese!
+        </p>
       </div>
       <div class="newBooks-col">
-        <img src="images\cityofmagic.jpg">
-        <h3><a href="https://www.goodreads.com/book/show/58210891-city-of-magic" target="_blank">City Of Magic</a></h3>
-        <p>From Newbery Medalist Avi comes a richly imagined, action-packed companion to his bestselling medieval mysteries Midnight Magic and Murder at Midnight!</p>
+        <img src="images\cityofmagic.jpg" />
+        <h3>
+          <a
+            href="https://www.goodreads.com/book/show/58210891-city-of-magic"
+            target="_blank"
+            >City Of Magic</a
+          >
+        </h3>
+        <p>
+          From Newbery Medalist Avi comes a richly imagined, action-packed
+          companion to his bestselling medieval mysteries Midnight Magic and
+          Murder at Midnight!
+        </p>
       </div>
-    
+
       <div class="newBooks-col">
-        <img src="images\doubleExposure.jpg">
-        <h3><a href="https://www.amazon.com/Double-Exposure-Novel-Ava-Barry/dp/163936224X" target="_blank">Double Exposure</a></h3>
-        <p>In this heart-pounding tale of deception, a young P.I. must unravel the secrets behind the murders of a Los Angeles heiress's parents!</p>
+        <img src="images\doubleExposure.jpg" />
+        <h3>
+          <a
+            href="https://www.amazon.com/Double-Exposure-Novel-Ava-Barry/dp/163936224X"
+            target="_blank"
+            >Double Exposure</a
+          >
+        </h3>
+        <p>
+          In this heart-pounding tale of deception, a young P.I. must unravel
+          the secrets behind the murders of a Los Angeles heiress's parents!
+        </p>
       </div>
       <div class="newBooks-col">
-        <img src="images\truthOrLie.jpg">
-        <h3><a href="https://www.amazon.com/Truth-Lie-Dogs-Step-Reading/dp/0593429109" target="_blank">truth or Lie</a></h3>
-        <p>See if you can find the facts about your favorite dogs with the help of the Truth Sleuth!</p>
+        <img src="images\truthOrLie.jpg" />
+        <h3>
+          <a
+            href="https://www.amazon.com/Truth-Lie-Dogs-Step-Reading/dp/0593429109"
+            target="_blank"
+            >truth or Lie</a
+          >
+        </h3>
+        <p>
+          See if you can find the facts about your favorite dogs with the help
+          of the Truth Sleuth!
+        </p>
       </div>
       <div class="newBooks-col">
-        <img src="images\windPower.jpg">
-        <h3><a href="https://www.amazon.com/Power-Energy-Evolutions-Robyn-Hardyman/dp/1914383052" target="_blank">Wind Power</a></h3>
-        <p>In this inspiring science book readers will find out why we burn fossil fuels, the harm it is causing, and why evolution in the wind power industry could make it a powerful weapon in the fight to create a sustainable future.</p>
+        <img src="images\windPower.jpg" />
+        <h3>
+          <a
+            href="https://www.amazon.com/Power-Energy-Evolutions-Robyn-Hardyman/dp/1914383052"
+            target="_blank"
+            >Wind Power</a
+          >
+        </h3>
+        <p>
+          In this inspiring science book readers will find out why we burn
+          fossil fuels, the harm it is causing, and why evolution in the wind
+          power industry could make it a powerful weapon in the fight to create
+          a sustainable future.
+        </p>
       </div>
     </div>
 
-     <!----------------------------Footer---------------------------------->
-     <section class="footer">
+    <!----------------------------Footer---------------------------------->
+    <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
@@ -100,7 +166,12 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br><a href="sitemap.html">(Site Map)</a></p>
+          <p>
+            Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br /><a
+              href="sitemap.html"
+              >(Site Map)</a
+            >
+          </p>
         </div>
 
         <div class="footer-col3">
@@ -117,4 +188,4 @@
       </div>
     </section>
   </body>
-  </html>
+</html>
