--- a/sitemap.html
+++ b/sitemap.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src=js\script.js></script>
+    <script src="js\script.js"></script>
   </head>
 
   <body>
@@ -26,8 +26,10 @@
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li></li>
-            <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
+            <li><a href="about.html">About</a></li>
+            <li>
+              <a href="servicesandspecialties.html">Services and Specialties</a>
+            </li>
             <li><a href="events.html">Events</a></li>
             <li><a href="connect.html">Connect</a></li>
             <li><a href="explore.html">Explore</a></li>
@@ -39,29 +41,32 @@
     </section>
     <!-----------------Sitemap content------------------------------------->
 
-    <section >
+    <section>
       <div class="sitemap">
-          <div class="row">
-            <div class="sitemap-col1">
-            </div>
-            <div class="sitemap-col2">
-                    <ul >
-                      <li ><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
-                      <li><a href="events.html">Events</a></li>
-                      <li><a href="connect.html">Connect</a></li>
-                      <li><a href="explore.html">Explore</a></li>
-                      <li><a href="privacypolicy.html">Policies</a></li>
-                </ul>
-            </div>
-            <div class="sitemap-col3"> 
-            </div>
+        <div class="row">
+          <div class="sitemap-col1"></div>
+          <div class="sitemap-col2">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li>
+                <a href="servicesandspecialties.html"
+                  >Services and Specialties</a
+                >
+              </li>
+              <li><a href="events.html">Events</a></li>
+              <li><a href="connect.html">Connect</a></li>
+              <li><a href="explore.html">Explore</a></li>
+              <li><a href="privacypolicy.html">Policies</a></li>
+            </ul>
           </div>
-        </section>
-    
-     <!----------------------------Footer---------------------------------->
-     <section class="footer">
+          <div class="sitemap-col3"></div>
+        </div>
+      </div>
+    </section>
+
+    <!----------------------------Footer---------------------------------->
+    <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
@@ -88,7 +93,6 @@
             <i class="fa fa-twitter"></i>
           </div>
           <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara</p>
-
         </div>
 
         <div class="footer-col3">
@@ -105,4 +109,4 @@
       </div>
     </section>
   </body>
-  </html>
+</html>
