updated forms with jquery

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src=js\script.js></script>
+    <script src="js\script.js"></script>
   </head>
 
   <body>
@@ -26,9 +26,11 @@
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
             <li><a href="index.html">Home</a></li>
-          
+
             <li><a class="active" href="">About</a></li>
-            <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
+            <li>
+              <a href="servicesandspecialties.html">Services and Specialties</a>
+            </li>
             <li><a href="events.html">Events</a></li>
             <li><a href="connect.html">Connect</a></li>
             <li><a href="explore.html">Explore</a></li>
@@ -44,18 +46,22 @@
       <div class="row">
         <div class="subcontent-col">
           <h1>Vision</h1>
-          <p>To be the heart of our diverse community by promoting the development of independent, self-confident, and literate citizens, and providing equitable access to cultural, intellectual, technological, and information resources.
+          <p>
+            To be the heart of our diverse community by promoting the
+            development of independent, self-confident, and literate citizens,
+            and providing equitable access to cultural, intellectual,
+            technological, and information resources.
           </p>
           <a href="explore.html" class="hero-btn blue-btn">Read Now</a>
-          </div>
+        </div>
         <div class="subcontent-col">
           <img src="images\img1.jpg" />
         </div>
       </div>
     </section>
 
-     <!----------------------------Footer---------------------------------->
-     <section class="footer">
+    <!----------------------------Footer---------------------------------->
+    <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
@@ -81,7 +87,12 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara <br><a href="sitemap.html">(Site Map)</a></p>
+          <p>
+            Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara <br /><a
+              href="sitemap.html"
+              >(Site Map)</a
+            >
+          </p>
         </div>
 
         <div class="footer-col3">
@@ -98,4 +109,4 @@
       </div>
     </section>
   </body>
-  </html>
+</html>
