--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src=js\script.js></script>
+    <script src="js\script.js"></script>
   </head>
 
   <body>
@@ -24,27 +24,31 @@
         <a href="login.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
           <ul>
-              <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
           </ul>
-         </div>
+        </div>
       </nav>
     </section>
-  <!-----Login and Register------------->
-  <section>        
-  <div class="loginregister">
-            <img src="images/login.png" class="avatar">
-              <h1>Login Here</h1>
-              <form>
-                  <p>Username</p>
-                  <input type="text" name="" placeholder="Enter Username" required>
-                  <p>Password</p>
-                  <input type="password" name="" placeholder="Enter Pssword" required><br><br><br>
-                  <input type="submit" name="" value="login">
-                  <a href="#">Forgot Password</a><br>
-                  <a href="#">Don't have an account</a>
-    
-              </form>
-          </div>
+    <!-----Login and Register------------->
+    <section>
+      <div class="loginregister">
+        <img src="images/login.png" class="avatar" />
+        <h1>Login Here</h1>
+        <form>
+          <p>Username</p>
+          <input type="text" name="" placeholder="Enter Username" required />
+          <p>Password</p>
+          <input
+            type="password"
+            name=""
+            placeholder="Enter Pssword"
+            required
+          /><br /><br /><br />
+          <input type="submit" name="" value="login" />
+          <a href="#">Forgot Password</a><br />
+          <a href="#">Don't have an account</a>
+        </form>
+      </div>
     </section>
 
     <!----------------------------Footer---------------------------------->
@@ -74,7 +78,12 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br><a href="sitemap.html">(Site Map)</a></p>
+          <p>
+            Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br /><a
+              href="sitemap.html"
+              >(Site Map)</a
+            >
+          </p>
         </div>
 
         <div class="footer-col3">
@@ -90,5 +99,5 @@
         </div>
       </div>
     </section>
- 
-    </body></html>
+  </body>
+</html>
