--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src=js\script.js></script>
+    <script src="js\script.js"></script>
   </head>
 
   <body>
@@ -27,7 +27,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="servicesandspecialties.html">Services and Specialties</a></li>
+            <li>
+              <a href="servicesandspecialties.html">Services and Specialties</a>
+            </li>
             <li><a href="events.html">Events</a></li>
             <li><a href="connect.html">Connect</a></li>
             <li><a href="explore.html">Explore</a></li>
@@ -43,20 +45,21 @@
       <div class="row">
         <div class="subcontent-col">
           <h1>Circulation Services</h1>
-          <p>Library Card Policy<br>
-            Checkout Policy<br>
+          <p>
+            Library Card Policy<br />
+            Checkout Policy<br />
             Customer Service Policy
           </p>
           <a href="explore.html" class="hero-btn blue-btn">Read Now</a>
-          </div>
+        </div>
         <div class="subcontent-col">
           <img src="images\img1.jpg" />
         </div>
       </div>
     </section>
 
-     <!----------------------------Footer---------------------------------->
-     <section class="footer">
+    <!----------------------------Footer---------------------------------->
+    <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
@@ -82,7 +85,12 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br><a href="sitemap.html">(Site Map)</a></p>
+          <p>
+            Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br /><a
+              href="sitemap.html"
+              >(Site Map)</a
+            >
+          </p>
         </div>
 
         <div class="footer-col3">
@@ -99,4 +107,4 @@
       </div>
     </section>
   </body>
-  </html>
+</html>
