--- a/servicesandspecialties.html
+++ b/servicesandspecialties.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src=js\script.js></script>
+    <script src="js\script.js"></script>
   </head>
 
   <body>
@@ -38,32 +38,38 @@
       <h1>Services and Specialties</h1>
     </section>
     <!-----------------Services and Specialties content------------------------------------->
-<p>We help people live happier, healthier, and more produtive lives. Find resources on building careers, parenting, cooking, investing, decorating, and crafting. Plan a trip, learn more about the past, or contemplate the present. Can't find what you need? Ask for help. We're here to help you find what you're looking for.</p>
+    <p>
+      We help people live happier, healthier, and more produtive lives. Find
+      resources on building careers, parenting, cooking, investing, decorating,
+      and crafting. Plan a trip, learn more about the past, or contemplate the
+      present. Can't find what you need? Ask for help. We're here to help you
+      find what you're looking for.
+    </p>
     <div class="row">
       <div class="services-col">
-        <img src="images\img4.jpg">
+        <img src="images\img4.jpg" />
         <div class="layer">
           <h3>Virtual Library</h3>
         </div>
       </div>
 
       <div class="services-col">
-        <img src="images\img6.jpg">
+        <img src="images\img6.jpg" />
         <div class="layer">
           <h3>Book Discussions</h3>
         </div>
       </div>
 
       <div class="services-col">
-        <img src="images\img5.jpg">
+        <img src="images\img5.jpg" />
         <div class="layer">
           <h3>Research</h3>
         </div>
       </div>
     </div>
 
-     <!----------------------------Footer---------------------------------->
-     <section class="footer">
+    <!----------------------------Footer---------------------------------->
+    <section class="footer">
       <div class="row">
         <div class="footer-col1">
           <div class="icons">
@@ -89,7 +95,12 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
           </div>
-          <p>Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br><a href="sitemap.html">(Site Map)</a></p>
+          <p>
+            Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara<br /><a
+              href="sitemap.html"
+              >(Site Map)</a
+            >
+          </p>
         </div>
 
         <div class="footer-col3">
@@ -107,5 +118,3 @@
     </section>
   </body>
 </html>
-
-     
