--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
               type="text"
               name=""
               id="firstName"
-              placeholder="Enter your Email address"
+              placeholder="Enter Your First Name"
               required
             />
           </div>
@@ -61,7 +61,7 @@
               type="text"
               name=""
               id="lastName"
-              placeholder="Enter your Email address"
+              placeholder="Enter Your Last Name"
               required
             />
           </div>
@@ -71,7 +71,7 @@
               type="email"
               name=""
               id="email"
-              placeholder="Enter your Email address"
+              placeholder="Enter Your Email address"
               required
             />
           </div>
@@ -81,7 +81,7 @@
               type="password"
               name=""
               id="password"
-              placeholder="Enter your Password"
+              placeholder="Enter Your Password"
               required
             />
           </div>
