Added JS CRUD Operations

--- a/readers.html
+++ b/readers.html
@@ -42,7 +42,7 @@
     <section>
       <div class="loginregister userinfo">
         <img src="images/login.png" class="avatar" />
-        <h1>Reader Info Here</h1>
+        <h1>Reader Details</h1>
 
         <div>
           <p>First Name</p>
