--- a/admin.html
+++ b/admin.html
@@ -15,116 +15,117 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.6.1.js"
+      integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+      crossorigin="anonymous"
+    ></script>
+
     <script src="js\script.js"></script>
   </head>
 
   <body>
     <section class="header1">
       <nav>
-        <a href="about.html"><img src="images\logo.png" /></a>
+        <a href="admin.html"><img src="images\logo.png" /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
             <li><a href="index.html">Home</a></li>
 
-            <li><a class="active" href="">About</a></li>
-            <li>
-              <a href="servicesandspecialties.html">Services and Specialties</a>
-            </li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="connect.html">Connect</a></li>
-            <li><a href="explore.html">Explore</a></li>
+            <li><a class="active" href="">Admin</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>About</h1>
+      <h1>Admin</h1>
     </section>
     <!-----------------Sub content------------------------------------->
 
-    <section class="subcontent">
-    
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
-        </tbody>
-      </table>
+    <section class="subcontent"></section>
 
-    </section>
+    <script>
+      $(document).ready(function () {
+        var userInfos = localStorage;
+        var _userInfos = [];
 
-    <!----------------------------Footer---------------------------------->
-    <section class="footer">
-      <div class="row">
-        <div class="footer-col1">
-          <div class="icons">
-            <h4>
-              <i class="fa fa-calendar-o"></i>Events<br />
-              <i class="fa fa-clone"></i>Catalog<br />
-              <i class="fa fa-id-card-o"></i>Library Cards<br />
-              <i class="fa fa-question-circle"></i>Ask a Librarian<br />
-              <i class="fa fa-heartbeat"></i>Donate
-            </h4>
-          </div>
-        </div>
+        Object.keys(localStorage).forEach(function (key) {
+          if (JSON.parse(localStorage.getItem(key))._Id != undefined) {
+            _userInfos.push(JSON.parse(localStorage.getItem(key)));
+          }
+        });
 
-        <div class="footer-col2">
-          <h4><a href="privacypolicy.html">Privacy Policy</a></h4>
-          <p>
-            <i class="fa fa-copyright"></i>Silent Library. All Rights Reserved
-          </p>
-          <div class="icons">
-            <i class="fa fa-phone">&nbsp;0112267990</i><br />
-            <i class="fa fa-google"></i>
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-twitter"></i>
-          </div>
-          <p>
-            Site by <i class="fa fa-heart-o"></i> Madhuja Pabasara <br /><a
-              href="sitemap.html"
-              >(Site Map)</a
-            >
-          </p>
-        </div>
+        console.log(_userInfos);
 
-        <div class="footer-col3">
-          <h4>Visit</h4>
+        //Create a HTML Table element.
+        var table = $("<table><table />").addClass("table");
 
-          <div class="icons">
-            <p><i class="fa fa-angle-double-right">&nbsp;Central Library</i></p>
-            <p>
-              <i class="fa fa-angle-double-right">&nbsp;Branch Libraries</i>
-            </p>
-            <p><i class="fa fa-angle-double-right">&nbsp;Projects</i></p>
-          </div>
-        </div>
-      </div>
-    </section>
+        //Add the header row.
+        var row = $(table[0].insertRow(-1));
+
+        var headerCell_1 = $("<th />");
+        headerCell_1.html("Reader Id");
+        row.append(headerCell_1);
+
+        var headerCell_2 = $("<th />");
+        headerCell_2.html("First Name");
+        row.append(headerCell_2);
+
+        var headerCell_3 = $("<th />");
+        headerCell_3.html("Last Name");
+        row.append(headerCell_3);
+
+        var headerCell_4 = $("<th />");
+        headerCell_4.html("Email");
+        row.append(headerCell_4);
+
+        var headerCell_5 = $("<th />");
+        headerCell_5.html("Action");
+        row.append(headerCell_5);
+
+        //Add the data rows.
+        for (var i = 0; i < _userInfos.length; i++) {
+          row = $(table[0].insertRow(-1));
+
+          var cell_1 = $("<td />");
+          cell_1.html(_userInfos[i]._Id);
+          row.append(cell_1);
+
+          var cell_2 = $("<td />");
+          cell_2.html(_userInfos[i]._firstName);
+          row.append(cell_2);
+
+          var cell_3 = $("<td />");
+          cell_3.html(_userInfos[i]._lastName);
+          row.append(cell_3);
+
+          var cell_4 = $("<td />");
+          cell_4.html(_userInfos[i]._email);
+          row.append(cell_4);
+
+          row.append(
+            '<button class="btn mod" type="button" onclick="onUpdate(' +
+              _userInfos[i]._Id +
+              ')" >Update</button>'
+          );
+          row.append(
+            '<button class="btn mod" type="button" onclick="onDelete(' +
+              _userInfos[i]._Id +
+              ')" >Delete</button>'
+          );
+        }
+
+        var dvTable = $(".subcontent");
+        dvTable.html("");
+        dvTable.append(table);
+      });
+    </script>
   </body>
 </html>
