--- a/register.html
+++ b/register.html
@@ -30,6 +30,7 @@
         <div class="nav-links" id="navLinks">
           <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="admin.html">Admin</a></li>
           </ul>
         </div>
       </nav>
